add guid package

--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Glasgow2015/team-12#readme",
   "dependencies": {
     "express": "^4.13.3",
+    "node-guid": "0.0.3",
     "nodemailer": "^1.8.0",
     "nodemailer-smtp-transport": "^1.0.4"
   }
