--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/Glasgow2015/team-12#readme",
   "dependencies": {
+    "config": "^1.16.0",
     "express": "^4.13.3",
+    "mysql": "^2.9.0",
     "node-guid": "0.0.3",
     "nodemailer": "^1.8.0",
     "nodemailer-smtp-transport": "^1.0.4"
