--- a/BeeTracker/app/src/main/AndroidManifest.xml
+++ b/BeeTracker/app/src/main/AndroidManifest.xml
@@ -20,5 +20,11 @@
 
         </activity>
     </application>
-
+    <receiver android:name=".NetworkStateReceiver">
+        <intent-filter>
+            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+        </intent-filter>
+    </receiver>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
