--- a/BeeTracker/app/src/main/AndroidManifest.xml
+++ b/BeeTracker/app/src/main/AndroidManifest.xml
@@ -19,12 +19,14 @@
         <activity android:name=".RunForm">
 
         </activity>
+
+        <receiver android:name=".NetworkStateReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
-    <receiver android:name=".NetworkStateReceiver">
-        <intent-filter>
-            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-        </intent-filter>
-    </receiver>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 </manifest>
