--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "config": "^1.16.0",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "mysql": "^2.9.0",
     "node-guid": "0.0.3",
     "nodemailer": "^1.8.0",
